--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -8,15 +8,21 @@
 
   border-bottom: 1px solid var(--gray-100);
 
-  img {
-    height: 4rem;
-  }
+  & > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  p {
-    margin-left: 2rem;
-    padding: 0.25rem 0 0.25rem 2rem;
-    border-left: 1px solid var(--gray-100);
-    color: var(--green-400);
+    img {
+      height: 4rem;
+    }
+
+    p {
+      margin-left: 2rem;
+      padding: 0.25rem 0 0.25rem 2rem;
+      border-left: 1px solid var(--gray-100);
+      color: var(--green-400);
+    }
   }
 
   menu {
@@ -42,10 +48,44 @@
             color: var(--green-400);
           }
 
+          & > img {
+            display: none;
+          }
+
           &:hover {
             color: var(--green-600);
           }
         }
+      }
+
+      @media (max-width: 1280px) {
+        li:not(.cart) {
+          display: none;
+        }
+
+        .cart {
+          p {
+            display: none;
+          }
+
+          img {
+            display: block;
+          }
+        }
+      }
+    }
+  }
+
+  @media (max-width: 1280px) {
+    padding: 1rem;
+
+    & > div {
+      img {
+        height: 3rem;
+      }
+
+      p {
+        display: none;
       }
     }
   }
