--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -20,10 +20,26 @@
     font-weight: 500;
     font-size: 4rem;
   }
+
+  @media (max-width: 1280px) {
+    height: auto;
+    background: none;
+
+    h1 {
+      font-size: 2rem;
+      padding: 1rem;
+      text-align: center;
+      color: var(--gray-800);
+    }
+  }
 }
 
 .main {
   margin: 5rem;
+
+  @media (max-width: 1280px) {
+    margin: 2rem;
+  }
 }
 
 .about {
@@ -36,7 +52,6 @@
     align-items: center;
     justify-content: space-between;
 
-
     p {
       max-width: 40vw;
     }
@@ -44,6 +59,25 @@
     img {
       margin-right: 6rem;
       width: 10rem;
+    }
+  }
+
+  @media (max-width: 1280px) {
+    h2 {
+      display: none;
+    }
+
+    div {
+      justify-content: center;
+
+      p {
+        max-width: 100%;
+        text-align: center;
+      }
+
+      img {
+        display: none;
+      }
     }
   }
 }
@@ -65,8 +99,6 @@
     gap: 5rem 10rem;
 
     li {
-      position: relative;
-
       display: flex;
       align-items: center;
     }
@@ -87,6 +119,23 @@
 
     &:hover {
       background: var(--green-600);
+    }
+  }
+
+  @media (max-width: 1280px) {
+    h2 {
+      margin: 15px 0;
+      width: 100%;
+      text-align: center;
+    }
+
+    ul {
+      grid-template-columns: repeat(1, 1fr);
+      gap: auto;
+
+      li > div:first-child {
+        width: 90px;
+      }
     }
   }
 }
@@ -114,6 +163,16 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 5rem 10rem;
+
+  @media (max-width: 1280px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      display: none;
+    }
+  }
 }
 
 .localizationInfo {
@@ -160,6 +219,25 @@
       background: var(--green-600);
     }
   }
+
+  @media (max-width: 1280px) {
+    margin-left: auto;
+
+    span {
+      display: none;
+    }
+
+    h2, p {
+      text-align: center;
+      padding-bottom: 20px;
+    }
+
+    a {
+      padding: 1rem;
+      margin: 20px auto;
+      transition: background-color 1.2s;
+    }
+  }
 }
 
 .latestDepositions {
@@ -194,6 +272,10 @@
       }
 
     }
+  }
+
+  @media (max-width: 1280px) {
+    display: none;
   }
 }
 
