--- a/src/pages/about/about.module.scss
+++ b/src/pages/about/about.module.scss
@@ -12,6 +12,18 @@
     font-weight: 500;
     font-size: 4rem;
   }
+
+  @media (max-width: 1280px) {
+    height: auto;
+    background: none;
+
+    h1 {
+      font-size: 2rem;
+      padding: 1rem;
+      text-align: center;
+      color: var(--gray-800);
+    }
+  }
 }
 
 .main {
