--- a/src/pages/contact/contact.module.scss
+++ b/src/pages/contact/contact.module.scss
@@ -20,10 +20,26 @@
     font-weight: 500;
     font-size: 4rem;
   }
+
+  @media (max-width: 1280px) {
+    height: auto;
+    background: none;
+
+    h1 {
+      font-size: 2rem;
+      padding: 1rem;
+      text-align: center;
+      color: var(--gray-800);
+    }
+  }
 }
 
 .main {
   margin: 5rem;
+
+  @media (max-width: 1280px) {
+    margin: 2rem auto;
+  }
 }
 
 .contactInfo {
@@ -43,6 +59,17 @@
 
     span {
       color: var(--green-600);
+    }
+  }
+
+  @media (max-width: 1280px) {
+    h2 {
+      text-align: center;
+    }
+
+    p, span {
+      width: 100%;
+      padding-bottom: 20px;
     }
   }
 }
