--- a/src/pages/products/products.module.scss
+++ b/src/pages/products/products.module.scss
@@ -12,6 +12,18 @@
     font-weight: 500;
     font-size: 4rem;
   }
+
+  @media (max-width: 1280px) {
+    height: auto;
+    background: none;
+
+    h1 {
+      font-size: 2rem;
+      padding: 1rem;
+      text-align: center;
+      color: var(--gray-800);
+    }
+  }
 }
 
 .products {
@@ -54,6 +66,16 @@
           color: var(--green-400);
         }
       }
+    }
+  }
+
+  @media (max-width: 1280px) {
+    margin: 2rem 0;
+
+    ul {
+      padding: 40px;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 40px;
     }
   }
 }
