--- a/src/pages/cart/products.module.scss
+++ b/src/pages/cart/products.module.scss
@@ -52,8 +52,6 @@
     gap: 5rem 10rem;
 
     li {
-      position: relative;
-
       display: flex;
       flex-direction: column;
       align-items: left;
@@ -72,6 +70,24 @@
       &:hover {
         p {
           color: var(--green-400);
+        }
+      }
+    }
+  }
+
+  @media (max-width: 1280px) {
+    margin: 10px auto;
+
+    ul {
+      padding: 40px;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 40px;
+
+      li {
+        align-items: center;
+
+        p, span {
+          text-align: center;
         }
       }
     }
@@ -96,7 +112,7 @@
   margin-bottom: 5rem;
   display: flex;
   align-items: center;
-  justify-content: space-between  ;
+  justify-content: space-between;
   width: 77%;
 
   span {
@@ -136,6 +152,23 @@
       }
     }
   }
+
+  @media (max-width: 1280px) {
+    margin: 10px auto;
+    padding: 10px;
+    width: 100%;
+    flex-direction: column;
+
+    span {
+      padding-bottom: 15px;
+    }
+
+    div {
+      a {
+        text-align: center;
+      }
+    }
+  }
 }
 
 .emptyCart {
@@ -146,6 +179,7 @@
 
   h2 {
     margin: 2.5rem auto;
+    text-align: center;
   }
 
   button {
