--- a/src/pages/purchase/purchase.module.scss
+++ b/src/pages/purchase/purchase.module.scss
@@ -35,6 +35,15 @@
       background: var(--green-600);
     }
   }
+
+  @media (max-width: 1280px) {
+    max-width: 100vw;
+    margin: 0;
+
+    fieldset legend h2 {
+      text-align: center;
+    }
+  }
 }
 
 .fieldGroup {
@@ -42,6 +51,14 @@
 
   .field + .field {
     margin-left: 2rem;
+  }
+
+  @media (max-width: 1280px) {
+    flex-direction: column;
+
+    .field + .field {
+      margin-left: 0;
+    }
   }
 }
 
@@ -102,5 +119,11 @@
 
   label {
     margin-left: 0.2rem;
+  }
+
+  @media (max-width: 1280px) {
+    label {
+      margin-left: 1px;
+    }
   }
 }
